# DesignPatterns

./: CMakeLists.txt  include_files.h  main.cpp
factory/factory_method/hr_1/: Ifactory.h  employee.h  employee_factory.h  employee_randomizer.h  hr.h  hr_1_include.h  manager.h  manager_factory.h
factory/factory_method/hr_2/: Ifactory2.h  employee2.h  employee_factory2.h  employee_factory2_interface.h  employee_randomizer2.h  hr2.h  hr_2_include.h  manager2.h  manager_factory2.h  manager_factory2_interface.h
prototype/: car.h  prototypeFactory.h  prototypeFactoryInterface.h  prototype_test.h  race_car.h
singleton/: lazysingleton.h  singleton.h  singletonClient.h
